--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -2,10 +2,16 @@ name: Test Backend
 
 on:
   push:
+    paths:
+      - "backend/*"
+      - ".github/workflows/test-backend.yml"
   pull_request:
+    paths:
+      - "backend/*"
+      - ".github/workflows/test-backend.yml"
 
 jobs:
-  test-frontend:
+  test-backend:
     name: Test Backend
     runs-on: ubuntu-latest
     steps:
