--- a/.github/workflows/test-frontend.yml
+++ b/.github/workflows/test-frontend.yml
@@ -2,7 +2,13 @@ name: Test Frontend
 
 on:
   push:
+    paths:
+      - "frontend/*"
+      - ".github/workflows/test-frontend.yml"
   pull_request:
+    paths:
+      - "frontend/*"
+      - ".github/workflows/test-frontend.yml"
 
 jobs:
   test-frontend:
@@ -13,6 +19,5 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
-      - run: cd frontend
-      - run: npm install
-      - run: npm run build
+      - run: cd frontend && npm install
+      - run: cd frontend && npm run build
