--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,11 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "sass": "^1.58.3",
     "svelte": "^3.49.0",
     "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.0-alpha1"
   }
 }
